--- a/src/criarconta.html
+++ b/src/criarconta.html
@@ -25,11 +25,11 @@
                     <h3 class="nome">Telefone com DDD:</h3>
                     <input class="telefone" type="tel" name ="telefone-ddd">
 
-                    <h3 class="nome">Email:</h3>
-                    <input class="email" type="email" name ="email-user">
+                    <h3 class="nome">E-mail:</h3>
+                    <input class="e-mail" type="e-mail" name ="e-mail-user">
 
-                    <h3 class="nome">Confirme seu email:</h3>
-                    <input class="email" type="email" name ="conf-email-user">
+                    <h3 class="nome">Confirme seu e-mail:</h3>
+                    <input class="e-mail" type="e-mail" name ="conf-e-mail-user">
 
                     <h3 class="nome">Senha:</h3>
                     <input class="senha" type="password" name ="senha-user">
@@ -42,8 +42,8 @@
                 <select class = opcoes name="assunto">
 
                          <option disabled="disabled" selected="selected">--Selecione a opção</option>
-                         <option>Feminino</option>
                          <option>Masculino</option>
+                         <option>Feminino</option>
                 </select>
                 <div>
                     <button type="submit">Enviar</button>
